--- a/04-javascript-kategorisi/index.html
+++ b/04-javascript-kategorisi/index.html
@@ -93,9 +93,9 @@
     -->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <!-- <script src="js/001-hello-world.js"></script> -->
     <!-- <script src="js/002-degisken-tanimlama.js"></script> -->
     <!-- <script src="js/003-degisken-tanimlama-kurallari.js"></script> -->
@@ -139,7 +139,7 @@
     <!-- <script src="js/041-object-icinde-metot-nasil-ekleriz.js"></script> -->
     <!-- <script src="js/042-09-042-object-ve-array-destructuring-nasil-kullanilir.js"></script> -->
     <!-- <script src="js/043-hata-yonetimi-icin-try-catch-kullanimi.js"></script> -->
-    <script src="js/044-fetch-api-ile-calismak.js"></script>
+    <!-- <script src="js/044-fetch-api-ile-calismak.js"></script> -->
 </body>
 
 </html>
